setup codes are updated

--- a/Step_by_Step_Data_Science_Night_Complete.ipynb
+++ b/Step_by_Step_Data_Science_Night_Complete.ipynb
@@ -38,7 +38,11 @@
    "source": [
     "# Table of contents\n",
     "\n",
-    "- <a href=\"#Setup\">Setup</a>\n",
+    "- <a href=\"#Setup\">Setup environment</a>\n",
+    "  - <a href=\"#Anaconda 3.7\">Anaconda 3.7</a>\n",
+    "  - <a href=\"#Set up virtual environment\">Set up virtual environment</a>\n",
+    "  - <a href=\"#Install Keras and Tensorflow\">Install Keras and Tensorflow</a>\n",
+    "- <a href='Download workshop specific codes'> Download workshop specific codes</a>  \n",
     "- <a href=\"#Read in a video and play with it\">Read in a video and play with it</a>\n",
     "- <a href=\"#Object detection\">Object detection</a>"
    ]
@@ -50,37 +54,89 @@
     "<a id='Setup'>\n",
     "# Setup\n",
     "</a>\n",
-    "I am using Mac OS and I recommend readers to use Mac or Linux environment. (Sorry for Windows users).\n",
-    "\n",
-    "To follow the blog series, please install the followings:\n",
-    "\n",
-    "\n",
+    "I am using Mac OS and I recommend readers to use Mac. (Sorry for Windows users).\n",
+    "<a id='Anaconda 3.7'>\n",
     "### Anaconda 3.7\n",
-    "Please visit [Anaconda 3.7](https://www.anaconda.com/download/#macos) for installation. \n",
-    "<img src=\"https://farm5.staticflickr.com/4813/45031214485_2b1b879e3b_b.jpg\" width=\"890\"> \n",
+    "</a>\n",
+    "Please visit [Anaconda 3.7](https://www.anaconda.com/download/#macos) for installation. Note: This will take 2.26GB of space on your computer. **The installation took me about 7 MIN**. \n",
+    " - Answer to all the questions \"agree\"\n",
+    " \n",
+    "<img src=\"https://farm5.staticflickr.com/4813/45031214485_2b1b879e3b_b.jpg\" width=\"590\">\n",
     "\n",
+    "<img src=\"https://farm8.staticflickr.com/7816/31956933167_00fee7c4b3_b.jpg\" width=\"590\" alt=\"Install Anaconda\">   \n",
+    "<a id='Set up virtual environment'>\n",
+    "### Set up virtual environment (Optional but highly recommended)\n",
+    "</a>\n",
+    "- #### Open terminal by searching \"terminal\" in spotlight.\n",
+    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46173346444/in/datetaken-public/\" title=\"OpenTerminal\"><img src=\"https://farm8.staticflickr.com/7885/46173346444_e39d11a51a_b.jpg\" width=\"524\" height=\"339\" alt=\"OpenTerminal\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
+    "\n",
+    "\n",
+    "- #### Let's check if conda is correctly installed. In terminal, type: \n",
+    "    \n",
+    "    <code>conda -V</code>\n",
+    "    \n",
+    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/39933401383/in/datetaken-public/\" title=\"condaV\"><img src=\"https://farm8.staticflickr.com/7823/39933401383_2f65534ac9_b.jpg\" width=\"524\" height=\"73\" alt=\"condaV\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
+    "\n",
+    " If conda is installed you should see the conda version. (This step should work if you correctly installed anaconda 3.7).\n",
+    " \n",
+    "- #### Make the conda up to date by typing the following command to terminal:\n",
+    "\n",
+    "    <code>conda update conda</code>\n",
+    "    \n",
+    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46846226532/in/datetaken-public/\" title=\"conda_update_conda\"><img src=\"https://farm5.staticflickr.com/4915/46846226532_85977cb61c_b.jpg\" width=\"549\" alt=\"conda_update_conda\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
+    "    \n",
+    "- #### Create a virtual environment for our DataScienceNightSJSU\n",
+    "\n",
+    "    <code>conda create -n DataScienceNightSJSU python=3.7 anaconda</code>\n",
+    "    \n",
+    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/39933401433/in/datetaken-public/\" title=\"condacreate1\"><img src=\"https://farm8.staticflickr.com/7825/39933401433_8729ab34bf_b.jpg\" width=\"542\" alt=\"condacreate1\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
+    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46846226452/in/datetaken-public/\" title=\"condacreate2\"><img src=\"https://farm5.staticflickr.com/4870/46846226452_97c6d08c35_b.jpg\" width=\"542\" alt=\"condacreate2\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>    \n",
+    "\n",
+    "- #### Activate your virtual environment\n",
+    "    Activating a conda environment modifies the PATH and shell variables to point to the specific isolated Python set-up you created. \n",
+    "    \n",
+    "    <code>source activate DataScienceNightSJSU</code>\n",
+    "    \n",
+    "    You can alos see all available conda environments by typing <code>conda info -e </code>.\n",
+    "    \n",
+    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46846226332/in/datetaken-public/\" title=\"condinfoe\"><img src=\"https://farm8.staticflickr.com/7876/46846226332_7766da8c99_b.jpg\" width=\"532\" alt=\"condinfoe\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
+    "    \n",
+    "    \n",
+    "#### Refernece:\n",
+    "If you want to know the details of each step to create a virtual environment, please visit [this website: Create virtual environments for python with conda](https://uoa-eresearch.github.io/eresearch-cookbook/recipe/2014/11/20/conda/)\n",
+    "\n",
+    "\n",
+    "<a id='Install Keras and Tensorflow'>\n",
     "### Keras and Tensorflow\n",
+    "</a>\n",
     "In the later blog [Part 4: Object detection with Pascal data - CNN feature extraction](https://fairyonice.github.io/Object_detection_with_PASCAL_VOC2012_selective_search.html), you will also need Keras and tensorflow installed in your environment. These are very popular deep learning frameworks. You do NOT need GPU to follow this blog series as we will only use pre-trained network. To install them, from your terminal run the following codes:\n",
     "\n",
     "```\n",
-    "pip install tensorflow\n",
-    "pip install keras\n",
-    "```\n",
-    "\n",
-    "<img src=\"https://farm5.staticflickr.com/4833/45895479252_5b5f94c66d_b.jpg\" width=\"1024\" height=\"160\" alt=\"Screen Shot 2018-11-18 at 1.57.50 PM\">\n"
+    "conda install tensorflow\n",
+    "conda install keras\n",
+    "conda install -c menpo opencv=2.4.11\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To follow the tutorial, you need to set up your environments: \n",
-    "- Step 1: Please download the folder from [this Dropbox folder](https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0), and save it in your desktop as \"DataScienceNightSJSU\". \n",
-    "  - The folder contains: \n",
-    "     - weights_yumi.h5 : The pre-trained Yolo weights  \n",
-    "     - backend.py      : code to read-in pre-trained Yolo model\n",
-    "     - DataSci\n",
-    "- Step 2: Open ipython notebook in the folder you just donwloaded.\n"
+    "<a id='Download workshop specific codes'>\n",
+    "# Download workshop specific codes\n",
+    "</a>\n",
+    "To follow the tutorial, you need to set up your environments:\n",
+    "- Step 1: Download the python scripts to use pre-trained model from [my Github repository](https://github.com/FairyOnIce/DataScienceNightSJSU). \n",
+    "\n",
+    "<img src=\"https://farm5.staticflickr.com/4844/31956192837_695f7819f4_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.26.25 PM\">\n",
+    "\n",
+    "- Step 2: Please download weights_yumi.h5 (194MB) from [this Dropbox folder](https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0), and save it in your git repository you just downloaded in Step 1. \n",
+    "  - The folder contains the pre-trained YOLO weights named \"weights_yumi.h5\" (194MB). \n",
+    "  - This folder is not part of the git repository because file size of \"weights_yumi.h5\" exceeds GitHub's file size limit of 100.00 MB.\n",
+    "        \n",
+    "<img src=\"https://farm8.staticflickr.com/7917/46897447071_5dcac3d3fa_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.11.20 PM\">\n",
+    "\n",
+    "- Step 3: Open ipython notebook in the folder you just donwloaded.\n"
    ]
   },
   {
@@ -933,7 +989,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "obj_threshold = 0.015"
@@ -1122,7 +1180,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_gif(gifname,dir_image,duration=1):\n",
