more png are added in setup

--- a/Step_by_Step_Data_Science_Night_Complete.ipynb
+++ b/Step_by_Step_Data_Science_Night_Complete.ipynb
@@ -41,7 +41,7 @@
     "- <a href=\"#Setup\">Setup environment</a>\n",
     "  - <a href=\"#Anaconda 3.7\">Anaconda 3.7</a>\n",
     "  - <a href=\"#Set up virtual environment\">Set up virtual environment</a>\n",
-    "  - <a href=\"#Install Keras and Tensorflow\">Install Keras and Tensorflow</a>\n",
+    "  - <a href=\"#Install python modules\">Install python modules e.g. Tensorflow</a>\n",
     "- <a href='Download workshop specific codes'> Download workshop specific codes</a>  \n",
     "- <a href=\"#Read in a video and play with it\">Read in a video and play with it</a>\n",
     "- <a href=\"#Object detection\">Object detection</a>"
@@ -106,16 +106,27 @@
     "If you want to know the details of each step to create a virtual environment, please visit [this website: Create virtual environments for python with conda](https://uoa-eresearch.github.io/eresearch-cookbook/recipe/2014/11/20/conda/)\n",
     "\n",
     "\n",
-    "<a id='Install Keras and Tensorflow'>\n",
-    "### Keras and Tensorflow\n",
+    "<a id='#Install python modules'>\n",
+    "### Install python modules, e.g. Tensorflow, Keras, opencv\n",
     "</a>\n",
-    "In the later blog [Part 4: Object detection with Pascal data - CNN feature extraction](https://fairyonice.github.io/Object_detection_with_PASCAL_VOC2012_selective_search.html), you will also need Keras and tensorflow installed in your environment. These are very popular deep learning frameworks. You do NOT need GPU to follow this blog series as we will only use pre-trained network. To install them, from your terminal run the following codes:\n",
+    "To run the scripts, you need deep learning APIs such as Keras, tensorflow and also computer vision module such as opencv in your environment.\n",
+    "Note: You do NOT need GPU to follow this blog series as we will only use pre-trained network. To install them, from your terminal run the following codes:\n",
     "\n",
     "```\n",
     "conda install tensorflow\n",
     "conda install keras\n",
     "conda install -c menpo opencv=2.4.11\n",
-    "```\n"
+    "```\n",
+    "Here is how my terminal look like when you run the above commands in terminal. \n",
+    "\n",
+    "<h2><code>conda install tensorflow</code></h2>\n",
+    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/33023346168/in/datetaken-public/\" title=\"tensorflow\"><img src=\"https://farm8.staticflickr.com/7895/33023346168_0a0aaa6ffc_b.jpg\" width=\"540\" alt=\"tensorflow\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script> \n",
+    "    \n",
+    "<h2><code>conda install keras</code></h2>    \n",
+    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46173864324/in/datetaken-public/\" title=\"keras\"><img src=\"https://farm8.staticflickr.com/7885/46173864324_4f5121f2c4_b.jpg\" width=\"522\" alt=\"keras\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
+    "\n",
+    "<h2><code>conda install -c menpo opencv=2.4.11</code></h2>    \n",
+    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/33023346258/in/datetaken-public/\" title=\"opencv\"><img src=\"https://farm8.staticflickr.com/7834/33023346258_0e14592d4a_b.jpg\" width=\"522\" alt=\"opencv\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>"
    ]
   },
   {
