--- a/Step_by_Step_Data_Science_Night_Complete.ipynb
+++ b/Step_by_Step_Data_Science_Night_Complete.ipynb
@@ -51,109 +51,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Setup'>\n",
-    "# Setup\n",
-    "</a>\n",
-    "I am using Mac OS and I recommend readers to use Mac. (Sorry for Windows users).\n",
-    "<a id='Anaconda 3.7'>\n",
-    "### Anaconda 3.7\n",
-    "</a>\n",
-    "Please visit [Anaconda 3.7](https://www.anaconda.com/download/#macos) for installation. Note: This will take 2.26GB of space on your computer. **The installation took me about 7 MIN**. \n",
-    " - Answer to all the questions \"agree\"\n",
-    " \n",
-    "<img src=\"https://farm5.staticflickr.com/4813/45031214485_2b1b879e3b_b.jpg\" width=\"590\">\n",
-    "\n",
-    "<img src=\"https://farm8.staticflickr.com/7816/31956933167_00fee7c4b3_b.jpg\" width=\"590\" alt=\"Install Anaconda\">   \n",
-    "<a id='Set up virtual environment'>\n",
-    "### Set up virtual environment (Optional but highly recommended)\n",
-    "</a>\n",
-    "- #### Open terminal by searching \"terminal\" in spotlight.\n",
-    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46173346444/in/datetaken-public/\" title=\"OpenTerminal\"><img src=\"https://farm8.staticflickr.com/7885/46173346444_e39d11a51a_b.jpg\" width=\"524\" height=\"339\" alt=\"OpenTerminal\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
-    "\n",
-    "\n",
-    "- #### Let's check if conda is correctly installed. In terminal, type: \n",
-    "    \n",
-    "    <code>conda -V</code>\n",
-    "    \n",
-    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/39933401383/in/datetaken-public/\" title=\"condaV\"><img src=\"https://farm8.staticflickr.com/7823/39933401383_2f65534ac9_b.jpg\" width=\"524\" height=\"73\" alt=\"condaV\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
-    "\n",
-    " If conda is installed you should see the conda version. (This step should work if you correctly installed anaconda 3.7).\n",
-    " \n",
-    "- #### Make the conda up to date by typing the following command to terminal:\n",
-    "\n",
-    "    <code>conda update conda</code>\n",
-    "    \n",
-    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46846226532/in/datetaken-public/\" title=\"conda_update_conda\"><img src=\"https://farm5.staticflickr.com/4915/46846226532_85977cb61c_b.jpg\" width=\"549\" alt=\"conda_update_conda\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
-    "    \n",
-    "- #### Create a virtual environment for our DataScienceNightSJSU\n",
-    "\n",
-    "    <code>conda create -n DataScienceNightSJSU python=3.7 anaconda</code>\n",
-    "    \n",
-    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/39933401433/in/datetaken-public/\" title=\"condacreate1\"><img src=\"https://farm8.staticflickr.com/7825/39933401433_8729ab34bf_b.jpg\" width=\"542\" alt=\"condacreate1\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
-    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46846226452/in/datetaken-public/\" title=\"condacreate2\"><img src=\"https://farm5.staticflickr.com/4870/46846226452_97c6d08c35_b.jpg\" width=\"542\" alt=\"condacreate2\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>    \n",
-    "\n",
-    "- #### Activate your virtual environment\n",
-    "    Activating a conda environment modifies the PATH and shell variables to point to the specific isolated Python set-up you created. \n",
-    "    \n",
-    "    <code>source activate DataScienceNightSJSU</code>\n",
-    "    \n",
-    "    You can alos see all available conda environments by typing <code>conda info -e </code>.\n",
-    "    \n",
-    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46846226332/in/datetaken-public/\" title=\"condinfoe\"><img src=\"https://farm8.staticflickr.com/7876/46846226332_7766da8c99_b.jpg\" width=\"532\" alt=\"condinfoe\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
-    "    \n",
-    "    \n",
-    "#### Refernece:\n",
-    "If you want to know the details of each step to create a virtual environment, please visit [this website: Create virtual environments for python with conda](https://uoa-eresearch.github.io/eresearch-cookbook/recipe/2014/11/20/conda/)\n",
-    "\n",
-    "\n",
-    "<a id='#Install python modules'>\n",
-    "### Install python modules, e.g. Tensorflow, Keras, opencv\n",
-    "</a>\n",
-    "To run the scripts, you need deep learning APIs such as Keras, tensorflow and also computer vision module such as opencv in your environment.\n",
-    "Note: You do NOT need GPU to follow this blog series as we will only use pre-trained network. To install them, from your terminal run the following codes:\n",
-    "\n",
-    "```\n",
-    "conda install tensorflow\n",
-    "conda install keras\n",
-    "conda install -c menpo opencv=2.4.11\n",
-    "```\n",
-    "Here is how my terminal look like when you run the above commands in terminal. \n",
-    "\n",
-    "<h2><code>conda install tensorflow</code></h2>\n",
-    "    <a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/33023346168/in/datetaken-public/\" title=\"tensorflow\"><img src=\"https://farm8.staticflickr.com/7895/33023346168_0a0aaa6ffc_b.jpg\" width=\"540\" alt=\"tensorflow\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script> \n",
-    "    \n",
-    "<h2><code>conda install keras</code></h2>    \n",
-    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/46173864324/in/datetaken-public/\" title=\"keras\"><img src=\"https://farm8.staticflickr.com/7885/46173864324_4f5121f2c4_b.jpg\" width=\"522\" alt=\"keras\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>\n",
-    "\n",
-    "<h2><code>conda install -c menpo opencv=2.4.11</code></h2>    \n",
-    "<a data-flickr-embed=\"true\"  href=\"https://www.flickr.com/photos/157237655@N08/33023346258/in/datetaken-public/\" title=\"opencv\"><img src=\"https://farm8.staticflickr.com/7834/33023346258_0e14592d4a_b.jpg\" width=\"522\" alt=\"opencv\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='Download workshop specific codes'>\n",
-    "# Download workshop specific codes\n",
-    "</a>\n",
-    "To follow the tutorial, you need to set up your environments:\n",
-    "- Step 1: Download the python scripts to use pre-trained model from [my Github repository](https://github.com/FairyOnIce/DataScienceNightSJSU). \n",
-    "\n",
-    "<img src=\"https://farm5.staticflickr.com/4844/31956192837_695f7819f4_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.26.25 PM\">\n",
-    "\n",
-    "- Step 2: Please download weights_yumi.h5 (194MB) from [this Dropbox folder](https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0), and save it in your git repository you just downloaded in Step 1. \n",
-    "  - The folder contains the pre-trained YOLO weights named \"weights_yumi.h5\" (194MB). \n",
-    "  - This folder is not part of the git repository because file size of \"weights_yumi.h5\" exceeds GitHub's file size limit of 100.00 MB.\n",
-    "        \n",
-    "<img src=\"https://farm8.staticflickr.com/7917/46897447071_5dcac3d3fa_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.11.20 PM\">\n",
-    "\n",
-    "- Step 3: Open ipython notebook in the folder you just donwloaded.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Great thing about ipython notebook is that it accept linux command.\n",
     "Check where I am:"
    ]
@@ -213,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +119,9 @@
      "text": [
       ">>My python version is 3.6.3 |Anaconda, Inc.| (default, Oct  6 2017, 12:04:38) \n",
       "[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)]\n",
-      ">>My opencv version is 3.2.0\n"
+      ">>My opencv version is 3.2.0\n",
+      ">>My keras version is 2.1.2\n",
+      ">>My tensorflow version is 1.9.0\n"
      ]
     }
    ],
@@ -232,8 +131,12 @@
     "import matplotlib.pyplot as plt # python's standard visualization library\n",
     "import cv2                      # opencv, common computer vision library\n",
     "import numpy as np              # python's matrix calculation library\n",
+    "import keras \n",
+    "import tensorflow\n",
     "print(\">>My python version is {}\".format(sys.version))\n",
     "print(\">>My opencv version is {}\".format(cv2.__version__))\n",
+    "print(\">>My keras version is {}\".format(keras.__version__))\n",
+    "print(\">>My tensorflow version is {}\".format(tensorflow.__version__))\n",
     "%matplotlib inline"
    ]
   },
