--- a/Step_by_Step_Data_Science_Night_Setup.ipynb
+++ b/Step_by_Step_Data_Science_Night_Setup.ipynb
@@ -81,7 +81,7 @@
     "```\n",
     "conda install tensorflow==1.9.0\n",
     "conda install keras==2.1.2\n",
-    "conda install -c menpo opencv3 \n",
+    "conda install opencv==3.4.2 \n",
     "```\n",
     "Here is how my terminal look like when you run the above commands in terminal. \n",
     "\n",
