--- a/Step_by_Step_Data_Science_Night_Setup.ipynb
+++ b/Step_by_Step_Data_Science_Night_Setup.ipynb
@@ -10,9 +10,9 @@
     "<h1>Table of contents</h1>\n",
     "\n",
     "- <a href=\"#Setup\"><h2>Setup environment</h2></a>\n",
-    "  - <a href=\"#Anaconda 3.7\"><h3>Anaconda 3.7</h3></a>\n",
+    "  - <a href=\"#Anaconda 3.7\"><h3>Install Anaconda 3.7</h3></a>\n",
     "  - <a href=\"#Set up virtual environment\"><h3>Set up virtual environment</h3></a>\n",
-    "  - <a href=\"#Install python modules\"><h3>Install python modules Tensorflow, Keras and opencv3</h3></a>\n",
+    "  - <a href=\"#Install python modules\"><h3>Install python modules Tensorflow (v1.9.0), Keras (v2.1.2) and opencv3 (v3.4.2)</h3></a>\n",
     " \n",
     "\n",
     "- <a href='#Download workshop specific codes'><h2>Download workshop specific codes</h2></a> "
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "<a id='Setup'><h1>Setup</h1></a>\n",
-    "I am using Mac OS and I recommend readers to use Mac. (Sorry for Windows users).\n",
+    "Please take the following steps in Max OSX (Sorry for Windows users).\n",
     "\n",
     "<a id='Anaconda 3.7'><h2>Anaconda 3.7</h2></a>\n",
     "Please visit [Anaconda 3.7](https://www.anaconda.com/download/#macos) for installation. Note: This will take 2.26GB of space on your computer. **The installation took me about 7 MIN**. \n",
@@ -33,7 +33,7 @@
     "\n",
     "<img src=\"https://farm8.staticflickr.com/7816/31956933167_00fee7c4b3_b.jpg\" width=\"590\" alt=\"Install Anaconda\">   \n",
     "\n",
-    "<a id='Set up virtual environment'><h2>Set up virtual environment (Optional but highly recommended)</h2></a>\n",
+    "<a id='Set up virtual environment'><h2>Set up virtual environment</h2></a>\n",
     "- <h3>Open terminal by searching \"terminal\" in spotlight.</h3>\n",
     "\n",
     "<img src=\"https://farm8.staticflickr.com/7885/46173346444_e39d11a51a_b.jpg\" width=\"524\" height=\"339\" alt=\"OpenTerminal\">\n",
@@ -72,18 +72,24 @@
     "If you want to know the details of each step to create a virtual environment, please visit [this website: Create virtual environments for python with conda](https://uoa-eresearch.github.io/eresearch-cookbook/recipe/2014/11/20/conda/)\n",
     "\n",
     "\n",
-    "<a id='#Install python modules'>\n",
+    "<a id='Install python modules'>\n",
     "<h1>Install python modules, e.g. Tensorflow, Keras, opencv</h1>\n",
     "</a>\n",
-    "To run the scripts, you need deep learning APIs such as Keras, tensorflow and also computer vision module such as opencv in your environment.\n",
-    "Note: You do NOT need GPU to follow this blog series as we will only use pre-trained network. To install them, from your terminal run the following codes:\n",
+    "Anaconda is a convinent package manager that comes with most of the common python packages. \n",
+    "However, to run my deep learning scripts, you need to separately install two deep learning packages (Keras and tensorflow) and a computer vision package, opencv, in your environment. \n",
+    "\n",
+    "- Note 1: It is very important to install the correct versions of these modules.  \n",
+    "- Note 2: You do NOT need GPU to follow this blog series as we will only use pre-trained network. \n",
+    "\n",
+    "To install the three packages, from your terminal run the following codes:\n",
     "\n",
     "```\n",
     "conda install tensorflow==1.9.0\n",
     "conda install keras==2.1.2\n",
     "conda install opencv==3.4.2 \n",
     "```\n",
-    "Here is how my terminal look like when you run the above commands in terminal. \n",
+    "\n",
+    "Here is how my terminal looks like when I run the above commands in my terminal. \n",
     "\n",
     "<h2><code>conda install tensorflow==1.9.0</code></h2>\n",
     "<img src=\"https://farm8.staticflickr.com/7895/33023346168_0a0aaa6ffc_b.jpg\" width=\"540\" alt=\"tensorflow\">\n",
