--- a/Step_by_Step_Data_Science_Night_Setup.ipynb
+++ b/Step_by_Step_Data_Science_Night_Setup.ipynb
@@ -27,13 +27,14 @@
     "\n",
     "<a id='Anaconda 3.7'><h2>Anaconda 3.7</h2></a>\n",
     "Please visit [Anaconda 3.7](https://www.anaconda.com/download/#macos) for installation. Note: This will take 2.26GB of space on your computer. **The installation took me about 7 MIN**. \n",
-    " - Answer to all the questions \"agree\"\n",
+    " - Press \"Continue\" at every step and agree to the terms of the software license agreement.\n",
     " \n",
     "<img src=\"https://farm5.staticflickr.com/4813/45031214485_2b1b879e3b_b.jpg\" width=\"590\">\n",
     "\n",
     "<img src=\"https://farm8.staticflickr.com/7816/31956933167_00fee7c4b3_b.jpg\" width=\"590\" alt=\"Install Anaconda\">   \n",
     "\n",
     "<a id='Set up virtual environment'><h2>Set up virtual environment</h2></a>\n",
+    "A virtual environment is a named, isolated, working copy of Python that that maintains its own files, directories, and paths so that you can work with specific versions of libraries or Python itself without affecting other Python projects.\n",
     "- <h3>Open terminal by searching \"terminal\" in spotlight.</h3>\n",
     "\n",
     "<img src=\"https://farm8.staticflickr.com/7885/46173346444_e39d11a51a_b.jpg\" width=\"524\" height=\"339\" alt=\"OpenTerminal\">\n",
@@ -49,15 +50,20 @@
     "- <h3>Make the conda up to date by typing the following command to terminal:</h3>\n",
     "\n",
     "    <code>conda update conda</code>\n",
+    "\n",
+    "    When \"Processed ([y]/n)?\", answer by hitting y.\n",
     "    \n",
     "<img src=\"https://farm5.staticflickr.com/4915/46846226532_85977cb61c_b.jpg\" width=\"549\" alt=\"conda_update_conda\">\n",
     "    \n",
-    "- <h3>Create a virtual environment for our DataScienceNightSJSU</h3>\n",
+    "- <h3>Create a virtual environment with name DataScienceNightSJSU</h3>\n",
     "\n",
     "    <code>conda create -n DataScienceNightSJSU python=3.6.3 anaconda</code>\n",
     "    \n",
-    "<img src=\"https://farm8.staticflickr.com/7825/39933401433_8729ab34bf_b.jpg\" width=\"542\" alt=\"condacreate1\">\n",
-    "<img src=\"https://farm5.staticflickr.com/4870/46846226452_97c6d08c35_b.jpg\" width=\"542\" alt=\"condacreate2\">\n",
+    "    - Here, we specify the python version to 3.6.3. \n",
+    "    - When \"Processed ([y]/n)?\", answer by hitting y.\n",
+    "    \n",
+    "    <img src=\"https://farm5.staticflickr.com/4859/31959484657_642d5f1033.jpg\" width=\"542\" alt=\"condacreate1\">\n",
+    "    <img src=\"https://farm5.staticflickr.com/4870/46846226452_97c6d08c35_b.jpg\" width=\"542\" alt=\"condacreate2\">\n",
     "\n",
     "- <h3>Activate your virtual environment</h3>\n",
     "    Activating a conda environment modifies the PATH and shell variables to point to the specific isolated Python set-up you created. \n",
@@ -73,15 +79,15 @@
     "\n",
     "\n",
     "<a id='Install python modules'>\n",
-    "<h1>Install python modules, e.g. Tensorflow, Keras, opencv</h1>\n",
+    "<h1>Install three additional python packages: tensorflow, keras, opencv</h1>\n",
     "</a>\n",
-    "Anaconda is a convinent package manager that comes with most of the common python packages. \n",
-    "However, to run my deep learning scripts, you need to separately install two deep learning packages (Keras and tensorflow) and a computer vision package, opencv, in your environment. \n",
+    "Anaconda is a convinent package manager that comes with most of the common python packages for do data analysis in python. However, to run my deep learning scripts, you need to separately install three more packages: \n",
+    "two deep learning packages (Keras and tensorflow) and a computer vision package, opencv, in your environment. \n",
     "\n",
     "- Note 1: It is very important to install the correct versions of these modules.  \n",
     "- Note 2: You do NOT need GPU to follow this blog series as we will only use pre-trained network. \n",
     "\n",
-    "To install the three packages, from your terminal run the following codes:\n",
+    "To install the three packages in your DataScienceNightSJSU environment, from your terminal run the following codes:\n",
     "\n",
     "```\n",
     "conda install tensorflow==1.9.0\n",
@@ -89,16 +95,17 @@
     "conda install opencv==3.4.2 \n",
     "```\n",
     "\n",
-    "Here is how my terminal looks like when I run the above commands in my terminal. \n",
+    "- When \"Processed ([y]/n)?\", answer by hitting y.\n",
+    "- Here is how my terminal looks like when I run the above commands in my terminal. \n",
     "\n",
     "<h2><code>conda install tensorflow==1.9.0</code></h2>\n",
-    "<img src=\"https://farm8.staticflickr.com/7895/33023346168_0a0aaa6ffc_b.jpg\" width=\"540\" alt=\"tensorflow\">\n",
+    "<img src=\"https://farm5.staticflickr.com/4909/46176347554_337144812f.jpg\" width=\"600\" alt=\"tensorflow (1)\">\n",
     "    \n",
     "<h2><code>conda install keras==2.1.2</code></h2>    \n",
-    "<img src=\"https://farm8.staticflickr.com/7885/46173864324_4f5121f2c4_b.jpg\" width=\"522\" alt=\"keras\"></a>\n",
+    "<img src=\"https://farm5.staticflickr.com/4825/46901173701_58a65db78d.jpg\" width=\"600\" alt=\"keras (1)\">\n",
     "\n",
-    "<h2><code>conda install -c menpo opencv3</code></h2>    \n",
-    "<img src=\"https://farm8.staticflickr.com/7834/33023346258_0e14592d4a_b.jpg\" width=\"522\" alt=\"opencv\">"
+    "<h2><code>conda install opencv==3.4.2</code></h2>    \n",
+    "<img src=\"https://farm8.staticflickr.com/7898/46901174291_62b14281f1.jpg\" width=\"600\" alt=\"opencv (1)\">"
    ]
   },
   {
@@ -108,19 +115,21 @@
     "<a id='Download workshop specific codes'>\n",
     "<h1> Download workshop specific codes </h1>\n",
     "</a>\n",
-    "To follow the tutorial, you need to set up your environments:\n",
-    "- <h3>Step 1: Download the python scripts to use pre-trained model from [my Github repository](https://github.com/FairyOnIce/DataScienceNightSJSU). </h3>\n",
+    "To follow the tutorial, you need to download some files that I created.\n",
+    "\n",
+    "\n",
+    "- <h3>Step 1: Download the python scripts to use pre-trained model from <a href=\"https://github.com/FairyOnIce/DataScienceNightSJSU\"> my GitHub repository </a></h3>\n",
     "\n",
     "<img src=\"https://farm5.staticflickr.com/4844/31956192837_695f7819f4_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.26.25 PM\">\n",
     "\n",
-    "- <h3>Step 2: Please download weights_yumi.h5 (194MB) from [this Dropbox folder](https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0), and save it in the GitHub repository you just downloaded in Step 1. </h3>\n",
+    "- <h3>Step 2: Please download weights_yumi.h5 (194MB) from <a href=\"https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0\">my GitHub repository</a>, and save it in the GitHub repository you just downloaded in Step 1. </h3>\n",
     "\n",
     "  - The folder contains the pre-trained YOLO weights named \"weights_yumi.h5\" (194MB). \n",
     "  - This folder is not part of the GitHub repository because the file size of \"weights_yumi.h5\" exceeds GitHub's file size limit of 100.00 MB.\n",
     "        \n",
     "<img src=\"https://farm8.staticflickr.com/7917/46897447071_5dcac3d3fa_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.11.20 PM\">\n",
     "\n",
-    "- <h3>Step 3: Open ipython notebook: Open your terminal, (activate the virtual environment if it has not activated) and then type:</h3>\n",
+    "- <h3>Step 3: Open ipython notebook: Open your terminal, (activate the virtual environment that <a href='#Set up virtual environment'>you just created</a>) and then type:</h3>\n",
     "\n",
     "    ```\n",
     "    jupyter notebook\n",
@@ -129,9 +138,19 @@
     "    A window will pop up in your browser.\n",
     "    <img src=\"https://farm5.staticflickr.com/4804/33023770938_b0a84773ef.jpg\" width=\"500\" height=\"207\" alt=\"jupyternotebook\">\n",
     "    \n",
-    "- <h3>Step 4: Direct to the folder that you just downloaded from GitHub, and create a new ipython notebook.</h3>\n",
-    "\n"
+    "- <h3>Step 4: Direct to the folder that you just downloaded from GitHub, and open the ipython notebook titled \"Step_by_Step_DataScience_Night_Complete.ipynb\"</h3>\n",
+    "\n",
+    "<img src=\"https://farm8.staticflickr.com/7893/46901176051_de71e1c7ba.jpg\" width=\"500\" height=\"183\" alt=\"openipythonnotebook\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
