--- a/Step_by_Step_Data_Science_Night_Setup.ipynb
+++ b/Step_by_Step_Data_Science_Night_Setup.ipynb
@@ -144,13 +144,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you are good to go! "
+   ]
   }
  ],
  "metadata": {
