--- a/Step_by_Step_Data_Science_Night_Complete.ipynb
+++ b/Step_by_Step_Data_Science_Night_Complete.ipynb
@@ -11,7 +11,7 @@
     "- the object's class (a person, cat etc)\n",
     "\n",
     "In this workshop, your final goal is to learn how to use YOLO's pretrained model and reproduce this video. \n",
-    "To achieve this goal, there are a lot of milestones that you will achieve: \n",
+    "To achieve this goal, there are a lot of milestones: \n",
     "\n",
     "- Learn how to use ipython notebook\n",
     "- Learn how to import video into ipython notebook, extract frames, and edit each frame.\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
