--- a/Step_by_Step_Data_Science_Night_Setup.ipynb
+++ b/Step_by_Step_Data_Science_Night_Setup.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "<img src=\"https://farm5.staticflickr.com/4844/31956192837_695f7819f4_b.jpg\" width=\"624\" alt=\"Screen Shot 2019-01-27 at 12.26.25 PM\">\n",
     "\n",
-    "- <h3>Step 2: Please download weights_yumi.h5 (194MB) from <a href=\"https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0\">my GitHub repository</a>, and save it in the GitHub repository you just downloaded in Step 1. </h3>\n",
+    "- <h3>Step 2: Please download weights_yumi.h5 (194MB) from <a href=\"https://www.dropbox.com/sh/duv9p0xq18ie9ti/AADGFnored5Bu9N_2yPMLQG6a?dl=0\">my Dropbox</a>, and save it in the GitHub repository you just downloaded in Step 1. </h3>\n",
     "\n",
     "  - The folder contains the pre-trained YOLO weights named \"weights_yumi.h5\" (194MB). \n",
     "  - This folder is not part of the GitHub repository because the file size of \"weights_yumi.h5\" exceeds GitHub's file size limit of 100.00 MB.\n",
