advertisement flyer added

--- a/Step_by_Step_Data_Science_Night_Setup.ipynb
+++ b/Step_by_Step_Data_Science_Night_Setup.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"https://farm8.staticflickr.com/7916/39963452293_57af9e4023.jpg\" width=\"386\" height=\"500\" alt=\"event_advertisement-1\">\n",
     "This notebook gives step by step instruction to set up the environment to run the codes [Use pretrained YOLO network for object detection, SJSU data science night](https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Complete.html).\n",
     "\n",
     "\n",
