--- a/Step_by_Step_Data_Science_Night_Complete.ipynb
+++ b/Step_by_Step_Data_Science_Night_Complete.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"https://farm8.staticflickr.com/7916/39963452293_57af9e4023.jpg\" width=\"386\" height=\"500\" alt=\"event_advertisement-1\">\n",
     "This YouTube video shows the object detection performance on a baby compilation video. \n",
     "For each frame of the video, a YOLO deep learning model detects\n",
     "\n",
@@ -15,7 +16,7 @@
     "\n",
     "- Learn how to use ipython notebook\n",
     "- Learn how to import video into ipython notebook, extract frames, and edit each frame.\n",
-    "- Learn bacic concept of object detection. \n",
+    "- Learn bacic concept of the object detection. \n",
     "- Learn how to create mp4 file and git in Mac OSX. "
    ]
   },
@@ -59,20 +60,20 @@
     "\n",
     "<h1>Table of contents</h1>\n",
     "\n",
-    "- <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Setup\"><h2>Setup environment*</h2></a> \n",
-    "  - <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Anaconda 3.7\"><h3>Install Anaconda 3.7*</h3></a> \n",
-    "  - <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Set up virtual environment\"><h3>Set up virtual environment*</h3></a>\n",
-    "  - <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Install python modules\"><h3>Install python modules Tensorflow (v1.9.0), Keras (v2.1.2) and opencv3 (v3.4.2)*</h3></a>\n",
-    "\n",
-    "- <a href='https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Download workshop specific codes'><h2>Download workshop specific codes*</h2></a>  \n",
-    "\n",
-    "- <a href=\"#import\"><h2>Import python libraries</h2></a>\n",
-    "\n",
-    "- <a href=\"#Read in a video and play with it\"><h2>Read in a video, extrac frames and edit them</h2></a>\n",
-    "\n",
-    "- <a href=\"#Object detection with YOLO\"><h2>Object detection</h2></a>\n",
-    "\n",
-    "*covered by the [previous blog post](https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html).\n"
+    "<ul>\n",
+    "  <li><a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Setup\"><h2>Setup environment#</h2></a></li>\n",
+    "  <ul>\n",
+    "    <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Anaconda 3.7\"><h3>Install Anaconda 3.7#</h3></a> </li>\n",
+    "    <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Set up virtual environment\"><h3>Set up virtual environment#</h3></a></li>\n",
+    "     <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Install python modules\"><h3>Install python modules Tensorflow (v1.9.0), Keras (v2.1.2) and opencv3 (v3.4.2)#</h3></a></li>\n",
+    "  </ul>\n",
+    "  <li><a href='https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Download workshop specific codes'><h2>Download workshop specific codes#</h2></a>  \n",
+    "</li>\n",
+    "  <li><a href=\"#import\"><h2>Import python libraries</h2></a></li>\n",
+    "  <li><a href=\"#Read in a video and play with it\"><h2>Read in a video, extrac frames and edit them</h2></a></li>\n",
+    "  <li><a href=\"#Object detection with YOLO\"><h2>Object detection</h2></a></li>\n",
+    "</ul>\n",
+    "#covered by the [previous blog post](https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html).\n"
    ]
   },
   {
