--- a/Step_by_Step_Data_Science_Night_Complete.ipynb
+++ b/Step_by_Step_Data_Science_Night_Complete.ipynb
@@ -61,19 +61,19 @@
     "<h1>Table of contents</h1>\n",
     "\n",
     "<ul>\n",
-    "  <li><a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Setup\"><h2>Setup environment#</h2></a></li>\n",
-    "  <ul>\n",
-    "    <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Anaconda 3.7\"><h3>Install Anaconda 3.7#</h3></a> </li>\n",
-    "    <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Set up virtual environment\"><h3>Set up virtual environment#</h3></a></li>\n",
-    "     <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Install python modules\"><h3>Install python modules Tensorflow (v1.9.0), Keras (v2.1.2) and opencv3 (v3.4.2)#</h3></a></li>\n",
+    "  <li><a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Setup\">Setup environment*</a></li>\n",
+    "   <ul>\n",
+    "    <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Anaconda 3.7\">Install Anaconda 3.7*</a> </li>\n",
+    "    <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Set up virtual environment\">Set up virtual environment*</a></li>\n",
+    "     <li> <a href=\"https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Install python modules\">Install python modules Tensorflow (v1.9.0), Keras (v2.1.2) and opencv3 (v3.4.2)*</a></li>\n",
     "  </ul>\n",
-    "  <li><a href='https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Download workshop specific codes'><h2>Download workshop specific codes#</h2></a>  \n",
+    "  <li><a href='https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html#Download workshop specific codes'>Download workshop specific codes*</a>  \n",
     "</li>\n",
-    "  <li><a href=\"#import\"><h2>Import python libraries</h2></a></li>\n",
-    "  <li><a href=\"#Read in a video and play with it\"><h2>Read in a video, extrac frames and edit them</h2></a></li>\n",
-    "  <li><a href=\"#Object detection with YOLO\"><h2>Object detection</h2></a></li>\n",
+    "  <li><a href=\"#import\">Import python libraries</a></li>\n",
+    "  <li><a href=\"#Read in a video and play with it\">Read in a video, extrac frames and edit them</a></li>\n",
+    "  <li><a href=\"#Object detection with YOLO\">Object detection</a></li>\n",
     "</ul>\n",
-    "#covered by the [previous blog post](https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html).\n"
+    "** covered by the [previous blog post](https://fairyonice.github.io/Step_by_Step_Data_Science_Night_Setup.html).\n"
    ]
   },
   {
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"Object detection\">\n",
+    "<a id=\"Object detection with YOLO\">\n",
     "# Object detection\n",
     "</a>\n",
     "\n",
